--- a/obra/index.html
+++ b/obra/index.html
@@ -74,6 +74,17 @@
 
                     <p>En 2007 se publicó una segunda edición dirigida nuevamente por Eduardo Báez Macías. Esta edición amplió el estudio introductorio y las notas, e incluyó la transcripción de las memorias de Fray Andrés, fechadas el 18 de septiembre de 1646, probablemente escritas en la etapa final de su vida en Salvatierra. También se agregaron varias fotografías de edificios construidos por Fray Andrés que aún se conservan. Un aspecto notable es que todas las ilustraciones fueron rehechas, excepto las de la sección de carpintería de armar, que se publicaron facsimilarmente tal como aparecen en el manuscrito.</p>
 
+                    <div class="imagenestexto" id="edicionesbaez">                    
+                        <div>
+                            <img src="/assets/images/Baez1969.png">
+                            <figcaption>Edición de Eduardo Báez de 1969.</figcaption>
+                        </div>
+                        <div>
+                            <img src="/assets/images/Baez2007.png">
+                            <figcaption>Reedición de Eduardo Baéz de 2007.</figcaption>
+                        </div>
+                    </div>
+
                 <h2>3. La sección de carpintería de armar</h2>
 
                     <p>Esta sección del manuscrito abarca varios temas:</p>
@@ -94,6 +105,11 @@
                     <p>Es interesante notar que entre la primera y la segunda edición del manuscrito (1969, 2007) ocurrió un hecho externo al estudio histórico de Fray Andrés. La obra llegó a manos del arquitecto español Enrique Nuere, quien tuvo su primer contacto con ella alrededor de 1982 gracias a la edición de Eduardo Báez. Este encuentro impactó significativamente los estudios de Nuere sobre la carpintería de armar histórica española, motivados por su interés en el tratado de Diego López de Arenas, publicado en 1630 en Sevilla. Sin embargo, los dibujos de carpintería en la primera edición de Báez no estaban bien ejecutados, lo que impedía su correcta interpretación. Esto llevó a Nuere a solicitar el microfilm del manuscrito conservado en Austin y obtener permisos para reproducirlo.</p>
 
                     <p>A partir de ahí, Nuere realizó una interpretación dibujada de la transcripción de Báez, corregida en parte por él mismo, y en 1990, con el apoyo editorial del Colegio Oficial de Arquitectos de Andalucía Oriental - Delegación de Málaga, publicó <i>La carpintería de lazo: lectura dibujada del manuscrito de Fray Andrés de San Miguel</i>.</p>
+
+                    <div class="imagenestexto img40">
+                        <img src="/assets/images/Nuere1990.jpg">
+                        <figcaption>Sección de carpintería de armar editada por Enrique Nuere en 1990.</figcaption>
+                    </div>
 
                     <p>La obra de Nuere convirtió la sección de carpintería de armar en la parte más importante del manuscrito, siendo la más estudiada hasta el momento. En el prólogo de la segunda edición, Eduardo Báez agradeció el trabajo de Nuere, así como el de otros investigadores como Rafael López Guzmán, Guillermo Tovar de Teresa y María Ángeles Toajas, quienes realizaron notables avances en el estudio de esta sección. Por otro lado, el libro de Nuere posiciona el manuscrito de Fray Andrés como una obra complementaria a la de Diego López de Arenas, sugiriendo que ambas deben leerse de manera conjunta. Su aporte al estudio de la carpintería de armar histórica española es su carácter técnico, desde la geometría. Según Nuere, Fray Andrés nunca construyó una armadura de lazo, ya que no ejerció como carpintero. Esto se refleja en la confección de los cartabones, tratada a través del cálculo geométrico y no mediante una receta práctica, como lo hacía López de Arenas. Además, Nuere señala que ambas obras fueron escritas aproximadamente en la misma época, pero en lugares diferentes, lo que sugiere que no hubo influencia mutua, fortaleciendo la idea de su lectura cruzada.</p>
 
