--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -80,6 +80,11 @@
                         Para llevar a cabo la publicación del texto se realizó una edición digital en XML siguiendo el estándar de la TEI, conservando la transcripción paleográfica del texto y procediendo posteriormente a la modernización del mismo a través del uso de las etiquetas <code>&lt;choice&gt;</code>, <code>&lt;orig&gt;</code>, <code>&lt;reg&gt;</code> y <code>&lt;corr&gt;</code>. También se han etiquetado todas las páginas, párrafos, líneas e ilustraciones con las etiquetas correspondientes.
                     </p>
 
+                    <div class="imagenestexto img100">
+                        <img src="/assets/images/xmltei.png" alt="">
+                        <figcaption>Captura de pantalla del editor de XML.</figcaption>
+                    </div>
+
                     <p>
                         El XML-TEI se utiliza como archivo fuente para la publicación en la web, gracias al uso de la librería JavaScript <a class="enlace" href="https://github.com/TEIC/CETEIcean" target="_blank">CETEIcean</a>. Esta librería permite mostrar documentos TEI en un navegador web sin necesidad de transformarlos previamente a HTML. Utiliza los estándares emergentes de <em>Web Components</em>, especialmente <em>Custom Elements</em>. Funciona cargando el archivo TEI dinámicamente, renombrando los elementos para que sigan las convenciones de <em>Custom Elements</em> y registrándolos en el navegador.
                     </p>
@@ -130,6 +135,12 @@
                     <p>
                         Finalmente, se creó una categoría especial para la única referencia histórica que aparece en la sección de carpintería de armar de Fray Andrés: la iglesia del convento de Santo Domingo de la Ciudad de México.
                     </p>
+
+                    <div class="imagenestexto img100">
+                        <img src="/assets/images/nota.png" alt="">
+                        <figcaption>Captura de pantalla de una nota abierta en la edición.</figcaption>
+
+                    </div>
 
                 <h3 id="Dibujos">5.3. Reproducción de los dibujos del manuscrito</h3>
                     <p>
