--- a/obra/index.html
+++ b/obra/index.html
@@ -47,6 +47,11 @@
 
                     <p>Fray Andrés de San Miguel falleció en la ciudad de Salvatierra, Guanajuato, en 1652.</p>
 
+                    <div class="imagenestexto">
+                        <img src="/assets/images/pintura.jpg">
+                        <figcaption>Arribo a la Nueva España de la Orden Reformada del Monte Carmelo (© Tacho Juárez Herrera, 2022).</figcaption>
+                    </div>
+
                 <h2>2. Comentarios sobre el manuscrito</h2>
                     <p>Aunque no se conoce con certeza la fecha exacta de redacción de la obra, los investigadores coinciden en que debió completarse en algún momento de la década de 1630. El manuscrito parece haber sido escrito en varias secciones y organizado de manera no sistemática, lo que le confiere una estructura menos coherente en comparación con otros tratados de la época. Es probable que se trate de una obra compuesta en diferentes periodos. Esto ha llevado a sugerir que no fue escrita íntegramente por Fray Andrés, sino que es una recopilación de textos sobre lo que aprendió del oficio de la arquitectura.</p>
 
