corregimos nombre beca

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -36,14 +36,14 @@
             <div class="texto">
                 <h2 id="Resumen">1. Resumen del proyecto</h2>
                     <p>
-                        La edición digital de la sección dedicada a la carpintería de armar del manuscrito de Fray Andrés de San Miguel, financiada gracias al programa <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/funding/digital-scholarship-fellowships/" target="_blank">LILLAS Benson Digital Scholarship Fellowship</a>, tiene por objetivo hacer accesible un texto técnico a través de un recurso digital de acceso abierto. Esta edición se centra en la transcripción paleográfica y modernización del manuscrito, facilitando su lectura y comprensión mediante anotaciones, un etiquetado exhaustivo de términos especializados y la mejora visual del contenido. El proyecto busca difundir las técnicas históricas de carpintería de armar, con especial énfasis en su relevancia para la investigación y restauración contemporánea. Además, pone a disposición de especialistas y el público en general herramientas que fomentan el aprendizaje interactivo, contribuyendo al conocimiento y conservación del patrimonio arquitectónico.
+                        La edición digital de la sección dedicada a la carpintería de armar del manuscrito de Fray Andrés de San Miguel, financiada gracias al programa <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/funding/digital-scholarship-fellowships/" target="_blank">LLILAS Benson Digital Scholarship Fellowship</a>, tiene por objetivo hacer accesible un texto técnico a través de un recurso digital de acceso abierto. Esta edición se centra en la transcripción paleográfica y modernización del manuscrito, facilitando su lectura y comprensión mediante anotaciones, un etiquetado exhaustivo de términos especializados y la mejora visual del contenido. El proyecto busca difundir las técnicas históricas de carpintería de armar, con especial énfasis en su relevancia para la investigación y restauración contemporánea. Además, pone a disposición de especialistas y el público en general herramientas que fomentan el aprendizaje interactivo, contribuyendo al conocimiento y conservación del patrimonio arquitectónico.
                     </p>
 
                 <h2 id="Creditos">2. Créditos</h2>
                     <p>
-                        Este proyecto ha sido llevado a cabo gracias al programa <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/funding/digital-scholarship-fellowships/" target="_blank">LILLAS Benson Digital Scholarship Fellowship</a>, otorgado en 2023 y ejecutado en 2024. El objetivo de este programa es fomentar el desarrollo de proyectos digitales en torno a las áreas de investigación prioritarias de LILLAS, aprovechando los documentos digitalizados de la colección Benson, especializada en temas de las Américas.
+                        Este proyecto ha sido llevado a cabo gracias al programa <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/funding/digital-scholarship-fellowships/" target="_blank">LLILAS Benson Digital Scholarship Fellowship</a>, otorgado en 2023 y ejecutado en 2024. El objetivo de este programa es fomentar el desarrollo de proyectos digitales en torno a las áreas de investigación prioritarias de LLILAS, aprovechando los documentos digitalizados de la colección Benson, especializada en temas de las Américas.
                     </p>
-                    <p style="text-align: center;"><img src="/assets/images/lillasbenson.png" alt="LILLAS Benson" style="height: 80px; width: auto;"></p>
+                    <p style="text-align: center;"><img src="/assets/images/llilasbenson.png" alt="LLilas Benson" style="height: 80px; width: auto;"></p>
 
 
                     <p>
@@ -60,7 +60,7 @@
                     </p>
 
                     <p>
-                        En 2019, la arquitecta Andrea Álvarez recibió la <em>LILLAS Benson Digital Scholarship Fellowship</em> con el proyecto “<a class="enlace" href="https://sites.utexas.edu/llilasbensonds/past-events/2019-10-24-rediscovering-fray-andres/" target="_blank">Rediscovering Fray Andrés de San Miguel’s 17th century Manuscript through 3D Printing</a>”, en el que exploró la modelización e impresión 3D de los dibujos arquitectónicos del manuscrito de la sección de carpintería de armar, logrando visualizar y comprender las armaduras de lazo a través de tecnologías digitales. Este proyecto contó con el apoyo del profesor Benjamín Ibarra-Sevilla de la <em>School of Architecture</em> de la <em>University of Texas-Austin</em>.
+                        En 2019, la arquitecta Andrea Álvarez recibió la <em>LLILAS Benson Digital Scholarship Fellowship</em> con el proyecto “<a class="enlace" href="https://sites.utexas.edu/llilasbensonds/past-events/2019-10-24-rediscovering-fray-andres/" target="_blank">Rediscovering Fray Andrés de San Miguel’s 17th century Manuscript through 3D Printing</a>”, en el que exploró la modelización e impresión 3D de los dibujos arquitectónicos del manuscrito de la sección de carpintería de armar, logrando visualizar y comprender las armaduras de lazo a través de tecnologías digitales. Este proyecto contó con el apoyo del profesor Benjamín Ibarra-Sevilla de la <em>School of Architecture</em> de la <em>University of Texas-Austin</em>.
                     </p>
 
                     <p>
