@media de img texto

--- a/obra/index.html
+++ b/obra/index.html
@@ -47,7 +47,7 @@
 
                     <p>Fray Andrés de San Miguel falleció en la ciudad de Salvatierra, Guanajuato, en 1652.</p>
 
-                    <div class="imagenestexto">
+                    <div class="imagenestexto img50">
                         <img src="/assets/images/pintura.jpg">
                         <figcaption>Arribo a la Nueva España de la Orden Reformada del Monte Carmelo (© Tacho Juárez Herrera, 2022).</figcaption>
                     </div>
