--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -43,7 +43,9 @@
                     <p>
                         Este proyecto ha sido llevado a cabo gracias al programa <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/funding/digital-scholarship-fellowships/" target="_blank">LLILAS Benson Digital Scholarship Fellowship</a>, otorgado en 2023 y ejecutado en 2024. El objetivo de este programa es fomentar el desarrollo de proyectos digitales en torno a las áreas de investigación prioritarias de LLILAS, aprovechando los documentos digitalizados de la colección Benson, especializada en temas de las Américas.
                     </p>
-                    <p style="text-align: center;"><img src="/assets/images/llilasbenson.png" alt="LLilas Benson" style="height: 80px; width: auto;"></p>
+                    <div  class="imagenestexto img40">
+                        <img src="/assets/images/llilasbenson.png" alt="LLilas Benson">
+                    </div>
 
 
                     <p>
